feat: começando o corpo do social media

--- a/src/app/pages/post-feed/post-feed.component.html
+++ b/src/app/pages/post-feed/post-feed.component.html
@@ -1,4 +1,5 @@
+<app-post></app-post>
 <button (click)="onCreatePostClick()" 
     mat-fab color="warn" id="post-button">
-    <mat-icon>+</mat-icon>
+    <mat-icon>add</mat-icon>
 </button>
