--- a/src/app/tools/create-post/create-post.component.html
+++ b/src/app/tools/create-post/create-post.component.html
@@ -3,7 +3,7 @@
         <mat-card-title>Create a New Post</mat-card-title>
     </mat-card-header>
     <div id="textarea">
-        <textarea placeholder="type message..."></textarea>
+        <textarea #commentinput placeholder="type message..."></textarea>
     </div>
     <div *ngIf="selectedPhotoFile" id ="post-preview">
         <img id="post-preview-imagem"/>
@@ -14,6 +14,6 @@
         <button mat-flat-button color="warn" (click)="photoSelector.click()">
             <mat-icon>image</mat-icon>
         </button>
-        <button mat-flat-button color="warn">Post</button>
+        <button (click)="onPostClick(commentinput)" mat-flat-button color="warn">Post</button>
     </mat-card-actions>
 </mat-card>
