--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,7 +21,7 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    color: white;
+    color: rgb(198, 237, 1);
 }
 
 #nav-bar-right{
