--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div id= "nav-bar">
     <div id="nav-bar-content">
         <div id="nav-bar-left">
-            <div class="nav-bar-items">Codeible</div>
+            <div class="nav-bar-items">Estágio</div>
         </div>
         <div id="nav-bar-right">
             <div *ngIf="!LoggedIn()" (click)= "onLoginClick()"
              class="nav-bar-items" >Login</div>
              <div *ngIf="LoggedIn() && userHasProfile" (click)="onLogoutClick()"
-             class="nav-bar-items" >Hello {{userDocument.publicName}} </div>
+             class="nav-bar-items" >Hello {{getUsername()}} </div>
              <div *ngIf="LoggedIn()" (click)="onLogoutClick()"
              class="nav-bar-items" >Logout</div>
         </div>
