--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -2,12 +2,12 @@
     <div id="page-home-landing">
         <div id="landing-left">
             <div id="landing-left-content">
-                <h1>Welcome to Social Media App</h1>
+                <h1>Social Media</h1>
                 <p>
-                    Connect with friends and the world around you.
+                  seus amigos estão aqui.
                </p>
                <button (click)="onGetStartedClick()"
-                mat-flat-button color="warn">Get Started</button>
+                mat-flat-button color="warn">Começar</button>
             </div>
         </div>
     </div>
