--- a/src/app/pages/post-feed/post-feed.component.html
+++ b/src/app/pages/post-feed/post-feed.component.html
@@ -1,4 +1,6 @@
-<app-post></app-post>
+<div id="post-feed">
+    <app-post *ngFor="let post of posts" [postData]="post"></app-post>
+</div>
 <button (click)="onCreatePostClick()" 
     mat-fab color="warn" id="post-button">
     <mat-icon>add</mat-icon>
