--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,8 @@
     width: 100%;
     height: 5em;
     z-index: 10;
+    background-color: rgb(33, 33, 33);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 #nav-bar-content{
@@ -21,7 +23,7 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    color: rgb(198, 237, 1);
+    color: rgb(255, 255, 255);
 }
 
 #nav-bar-right{
